--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Mark <mjagerton@ucdavis.edu>"]
 version = "0.1.0"
 
 [deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
